fix css icone visibili

--- a/assets/css/style-blue.css
+++ b/assets/css/style-blue.css
@@ -1818,9 +1818,16 @@ ul.list-1 li:hover i {
   font-size: 24px;
 }
 
-.schedule_list a .email { background: url("../img/elements/icon-mail.png") top center no-repeat }
-.schedule_list a .fb    { background: url("../img/elements/icon-facebook.png") top center no-repeat }
-.schedule_list a .url   { background: url("../img/elements/icon-web.png") top center no-repeat }
-.schedule_list a .twitter    { background: url("../img/elements/icon-twitter.png") top center no-repeat }
-.schedule_list a .googleplus { background: url("../img/elements/icon-plus.png") top center no-repeat }
-.schedule_list a .github     { background: url("../img/elements/icon-web.png") top center no-repeat }
+.schedule_list a.email, .schedule_list a.fb, .schedule_list a.url, .schedule_list a.twitter, .schedule_list a.googleplus, .schedule_list a.github {
+    text-indent: -9999px;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+
+.schedule_list a.email { background: url("../img/elements/icon-mail.png") top center no-repeat }
+.schedule_list a.fb    { background: url("../img/elements/icon-facebook.png") top center no-repeat }
+.schedule_list a.url   { background: url("../img/elements/icon-web.png") top center no-repeat }
+.schedule_list a.twitter    { background: url("../img/elements/icon-twitter.png") top center no-repeat }
+.schedule_list a.googleplus { background: url("../img/elements/icon-plus.png") top center no-repeat }
+.schedule_list a.github     { background: url("../img/elements/icon-web.png") top center no-repeat }
